k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genot-web
  namespace: genot-web-ns
  labels:
    app: genot-web
spec:
  strategy:
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: genot-web
  template:
    metadata:
      labels:
        app: genot-web
    spec:
      containers:
      - name: genot-web
        image: kaijehenstra/genot
        imagePullPolicy: Always
        resources:
          limits:
            memory: 350Mi
            cpu: "0.25"
          requests:
            memory: 10Mi
            cpu: 1m
        ports:
        - containerPort: 80
