k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: genot-webservice
spec:
  selector:
    app: genot-web
  ports:
    - protocol: TCP
      name: http
      port: 80 # Default port for image
