k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genot-webingress
spec:
  rules:
  - host: '*.genot.frl'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: genot-webservice
            port:
              number: 80
